# cpp-masters

./: CMakeLists.txt  README.md
allocators/: CMakeLists.txt  attempt1.cc  attempt2.cc  diffallocs.cc  freelist.cc  freelist.hpp  logging.cc  logging.hpp  memuse.hpp  pmrexample.cc  pmrtestres.cc  pmrtestres.hpp  scopedalloc.cc  shortalloc.cc  shortalloc.hpp  slist.cc  slist.hpp
atomics/: CMakeLists.txt  atomic_counter_demo.cc  atomic_counter_demo.plot  atomic_twice_demo.cc  atomic_twice_demo.plot  chasing_demo.cc  chasing_test.cc  custom_mutex_demo.cc  custom_mutex_demo.plot  inc_corr.cc  inc_naive.cc  lockfree_basic_bench.cc  lockfree_bench.cc  lockfree_comparison.plot  lockfree_queue.cc  lockfree_queue_demo.cc  lockfree_queue_improved_demo.cc  lockfree_queue_wrong.cc  sptr_atomic.cc  sptr_mutex.cc  sptr_race.cc  stack_reclaim_direct.cc  stack_reclaim_problem.cc  stack_reclaim_sptr.cc  stack_reclaim_sptr_wrong.cc
classtemplates/: CMakeLists.txt  backward.cc  danger1.cc  danger2.cc  dedguide.cc  dedsimple.cc  forint.cc  member-func-spec.cc  member-func.cc  partial-func.cc  partial-primer.cc  point-of-decl.cc
concepts/: CMakeLists.txt  compound.cc  contain.cc  difference-complex-simple.cc  distance-mystery.cc  distance-mystery.cc.cc  distance-too-simple.cc  distance-too-simple.cc.cc  distance-working.cc  eq-complexreq.cc  eq-constexprif.cc  eq-enableif.cc  eq-require.cc  eq.cc  explicitreq.cc  impossible.cc  minelt.cc  partial.cc  strange.cc
concurrency/: CMakeLists.txt  dcl.cc  dcl_once.cc  deadlock.cc  dining_lock.cc  dining_naive.cc  focus_demo.cc  locations_ok.cc  locations_ub.cc  lock_guard.cc  mutex_solution.cc  notify_all.cc  notify_one.cc  posix_solution.cc  race_demo.cc  race_demo_volatile.cc  shared_lock_bench.cc  spawned_id.cc  sutter_case.cc  thread_create.cc  volatile.cc
concurrency/follybenches/: CMakeLists.txt  hazptr_bench.cc  mutex_bench.cc  mutex_hazptr.plot  mutex_rcu.plot  mutex_rwlock.plot  mutex_sptr.plot  rcu_bench.cc  rcu_haz_10000.plot  run_rps.rb  rwlock_bench.cc  sptr_bench.cc  vars
concurrency/tsv2/: CMakeLists.txt  hazard.cpp  rcu.cpp
constexpr/: CMakeLists.txt  binparser.cc  cce.cc  cecollatz.cc  cenew.cc  cepred-expr.cc  ceval-cinit.cc  cexpr-local.cc  complex-op.cc  complex.cc  ctconst.cc  ctfield.cc  ctmap.cc  ctstrcpy.cc  cycle.cc  heavy.cc  ifcedetails.cc  mplike.cc  numlimits-fixed.cc  numlimits.cc  trits-op.cc  trits.cc  ubsan-dependent.cc  ubsan.cc  virtce-ok.cc  virtce.cc
coroutines/: CMakeLists.txt  cancellable.cc  conference-task.cc  fsm.cc  futures.cc  natseq.cc  natseq_range.cc  natseq_zip.cc  optional.cc  resumable.cc  subscribers.cc  subscribers_mt.cc  subscribers_mt_demo.cc  subscribers_mt_req.cc  subscribers_natlst.cc
functempls/: CMakeLists.txt  class-typename.cc  crocodile.cc  deduce-default.cc  deduce-generalized.cc  deduce-nttp.cc  deduce-partial.cc  deduce-qual.cc  deduce-spec.cc  generate-then-delete.cc  ics-tail.cc  name-hiding.cc  name-res-examples.cc  non-type-params.cc  non-type-spec.cc  nth-power-clean.cc  nth-power-concept.cc  nth-power-concrete.cc  nth-power-naive.cc  nth-power-traits.cc  templ-inst-spec.cc  templ-templ.cc  whats-call.cc
inference/: CMakeLists.txt  bindfail.cc  jcase_broken_deftype.cc  jcase_broken_fwd.cc  jcase_deftype.cc  jcase_forward.cc  jcase_negative.cc  jcase_positive.cc  jcase_single.cc  leftbind.cc  nrvo.cc  refovr.cc  rightbind.cc
lambdas/: CMakeLists.txt  callables.cc  decltyped.cc  explicit.cc  fwd_capture.cc  fwd_capture_astuple.cc  fwd_capture_problem.cc  generic_fail_demo.cc  implcast.cc  invoke.cc  more_transparent.cc  projection.cc  propagated.cc  renaming.cc  transparent.cc  tricky_capture_demo.cc  vapack.cc
modules/: discarded.cc  fullspec-1.cc  fullspec-2.cc  fullspec.hpp  hello-afx.cc  hello.cc  odruse.cc  stdafx.h
paracl/: paracl.md
parallel/: CMakeLists.txt  algo_bench.cc  algo_bench.plot  lambdas_async.cc  my_reduce.cc  my_reduce_async.cc  my_reduce_pkg.cc  paralg.cc  reduce_bench.cc  reduce_bench.plot
parasl/: parasl.txt
queues/: CMakeLists.txt  auto_return_generic.cc  auto_return_wrong.cc  basic_return.cc  classic_queue.cc  classic_queue_bench.cc  classic_queue_demo.cc  classic_queue_wrong-01.cc  classic_queue_wrong-02.cc  classic_queue_wrong-03.cc  classic_queue_wrong-04.cc  classic_queue_wrong_demo.cc  classic_stack.cc  classic_stack_demo.cc  classic_stack_wrong_demo.cc  futures.cc  latch.cc  marshalling.cc  packaged.cc  shared.cc  unbounded_queue_demo.cc
ranges/: CMakeLists.txt  brokenfilter.cc  buggy-concat.cc  common.cc  constfilter.cc  counted.cc  danglemessage.cc  dangling.cc  endvalue.cc  errmsg.cc  fibiter.cc  nondangleview.cc  nonsfinaeissue.cc  notlazy.cc  proj.cc  pullmodel.cc  sentinel.cc  sfinaeissue.cc  simplecomb.cc  strangeissue.cc  subsort.cc  takemore.cc  teaser.cc  tostr_adaptor.cc  tostr_view.cc  transformed.cc  trimbetter.cc  trimnaive.cc  typed.cc  unreachable.cc  working-concat.cc
runtimepoly/: CMakeLists.txt  crtp_mixins.cc  crtpcost_demo.cc  discouraging_function.cc  dynamic_casts.cc  dyncast_cost_demo.cc  init_seq.cc  romb_novirt.cc  romb_throw.cc  sean_parents.cc  virtcost_demo.cc  virtinh_cost_demo.cc  virtintf.cc  virtintf_crtp.cc  virtual_clone_base.cc  virtual_clone_mixin.cc  visible_base.cc
sfinae/: CMakeLists.txt  detected.cc  discrim-custom.cc  enableif-ints.cc  enableif-naive.cc  enableif-ptrs.cc  fireonce-naive.cc  fireonce-trampoline.cc  fusion-adapt.cc  hasfoobar-naive.cc  hasfoobar.cc  lazyness.cc  logic-broken.cc  logic-fixed.cc  mpltags.cc  sfinae-negate.cc  st.cc  void-discrim.cc
smartptrs/: CMakeLists.txt  movable.cc  moveret_demo.cc  prvalue.cc  sankels.cc  sankels_complete.cc
strings/: CMakeLists.txt  conversions.cc  cstrs.cc  fmt.cc  hello.cc  tokenizer.cc
utils/: opts.hpp  (+2 more)
variadics/: CMakeLists.txt  addable.cc  addable2.cc  commas.cc  conj.cc  cstyle.cc  cxxstyle_another_ok.cc  cxxstyle_ok.cc  cxxstyle_wrong.cc  exoticfold.cc  expansion.cc  expansion_initlist.cc  expansion_proxy.cc  expansion_wrong.cc  ineff.cc  mixins.cc  moreeff.cc  realeff.cc  reqpack.cc  sumall.cc  twopacks.cc  voidpack.cc
(+64 files in other folders)
